started styling tagged user mentions

--- a/pom.xml
+++ b/pom.xml
@@ -111,8 +111,14 @@
       <artifactId>kefirbb</artifactId>
       <version>1.5</version>
     </dependency>
-  </dependencies>
 
+    <dependency>
+    	<groupId>com.kcthota</groupId>
+    	<artifactId>emoji4j</artifactId>
+    	<version>5.0</version>
+    </dependency>
+  </dependencies>
+  
   <build>
     <plugins>
       <plugin>
